# 5chess

./: CMakeLists.txt  README.md  board.cpp  board.h  board.ui  connectui.cpp  connectui.h  connectui.ui  eve.cpp  eve.h  eve.ui  main.cpp  main1.cpp  pve.cpp  pve.h  pve.ui  pvplocal.cpp  pvplocal.h  pvplocal.ui  resources.qrc
